Разметка главной и внутренней страницы техмаркета

--- a/index.html
+++ b/index.html
@@ -5,8 +5,223 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+<header>
+  <div>
+    <p><a href="main.html">Техномарт</a></p>
+    <!--Форма
+    <>Поиск<>
+    -->
+    <p><a href="tabs.html">Закладки</a></p>
+    <p><a href="bin.html">Корзина</a></p>
+    <p><a href="order.html">Оформить заказ</a></p>
+ 
+</div>
+<section>
+<h1>
+  Интернет магазин<br>
+  строительных материалов<br>
+  и Инструментовдля ремесла
+</h1>
+  <p><button type="button" name="number">+7(812)555-05-55</button></p>
+  <p>г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<ul>
+  <!--
+   1. Я подрозумеваю что должна быть кнопка выхода,если есть кнопка входа.
+   2. Регистрация это в <button>  или <a>?
+  -->
+ <li><button type="button">Выход</button></li>
+ <li><button type="button">Войти</button></li>
+ <li><button type="button">Регистрация</button></li>
+</ul>
+</section>
+<nav>
+  <ul>
+    <li><a href="main.html">Главная></a></li>
+    <li><a href="about.html">Компания</a></li>
+    <li><a href="list.html">Каталог</a></li>
+    <li><a href="news/html">Новости</a></li>
+    <li><a href="special-offer.html">Спецпредложения</a></li>
+    <li><a href="delivery.html">Доставка</a></li> 
+    <li><a href="Contacts.html">Контакты</a></li>
+  </ul>
+</nav>
+</header>
+<main>
+<section>
+  <div>
+    <!--
+      Это все ссылки или перечесление *фишек* сайта?
+    -->
+    <p>Материалы</p>
+    <p>на любой вкус</p>
+  </div>
+  <div>
+    <p>Инструмент</p>
+    <p>на все случаи жизни</p>
+  </div>
+  <div>
+    <p>Техника</p>
+    <p>для стройки</p>
+  </div>
+  <div>
+    <p>Скидки 50%</p>
+    <p>на 350 товаров</p>
+  </div>
+  <div>
+    <p>Доставка</p>
+    <p>Бесплатно</p>
+  </div>
+  <div>
+    <p>Дрели</p>
+    <p>Соседям на радость!</p>
+    <a href=""><img src=""></a>
+    <button type="button">Вперед</button>
+    <button type="button">Назад</button>
+  </div>
+</section>
 
-  </body>
+<section>
+  <h2>Популярные товары</h2>
+  <p><a href="">Все популярные товары</a></p>
+
+ <ul>
+  <li><h3><span>Перфоратор BOSH</span><br> </h3></li>
+  <p><span>BFG 9000</span></p>
+  <p>32500 p.</p>
+  <p>25500 p.</p>
+
+
+  <li><h3><span>Перфоратор BOSH</span><br></h3></li>
+  <p><span>BFG 3000</span></p>
+  <p>22500 p.</p>
+  <p>15500 p.</p>
+
+ 
+  <li><h3><span>Перфоратор BOSH<span></span><br></h3></li>
+  <p><span>BFG 6000</span></p>
+  <p>30500 p.</p>
+  <p>25500 p.</p>
+  
+  <li><h3><span>Перфоратор BOSH</span><br></h3></li>
+  <p><span>BFG 2000</span></p><br>
+  <br>
+  <p>12500 p.</p>
+
+ </ul>
+</section>
+<section>
+ <h2>Популярные производители</h2>
+ <p><a href="">Все производители</a></p>
+
+<ul>
+<!--
+  Это все в <div> Или прямо в <li> ?
+-->
+ <li><img src=""></li>
+ <li><img src=""></li>
+ <li><img src=""></li>
+ <li><img src=""></li>
+ <li><img src=""></li>
+ <li><img src=""></li>
+ <li><img src=""></li>
+ <li><img src=""></li>
+
+</ul>
+
+
+</section>
+ 
+<section>
+  <h2>Сервисы</h2>
+  <p>Хороший интернет магазин отличается от плохого не только ценами!<br>
+     Мы стораемся изо всех сил чтобы сделать ваши покупки прятными</p>
+  
+    <ul>
+
+      <li><button type="">Доставка</button></li>
+      <li><button type="">Гарантия</button></li>
+      <li><button type="">Кредит</button></li>      
+    </ul> 
+
+    <h3>Доставка</h3>
+    <p>Мы с удовольствием доставим  ваш товар прямо<br>
+       к вашему подъезду совершенно бесплатно!<br>
+       Ведь мы неплохо заработаем,<br>
+       поднимая его на ваш этаж</p>
+
+   <div><img src=""></div>    
+
+</section>
+<section>
+  <h2>Информация о компании </h2>
+<div>
+  <h3>Компания "Техномарт"</h3>
+  <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства <br>
+     не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+     <br>
+     <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+        Техномарт работает со многими транспортными компаниями:</p>
+
+ <ul>
+   <li>Деловые линии</li>
+   <li>Автотрейдинг</li>
+   <li>ЖелДорЭкспедиция</li>
+ </ul>
+
+ <p><a href="about.html">Подробнее о компании</a></p>
+</div>
+
+
+<div>
+
+  <h3>Контакты</h3>
+  <p>Вы можете забрать товар сами,<br> 
+     заехав в наш офис:<br></p>
+  <br>
+<!--Тут будет карта-->
+  
+</div>
+</section>
+</main>
+
+<footer>
+  <section>
+    <p>Техномарт</p>
+    <br>
+    <p>г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p> 
+ 
+ 
+    <ul>
+      <li><a href="about.html">Компания</a></li>
+      <li><a href="news.html">Новости</a></li>
+      <li><a href="list.html">Каталог</a></li>
+      <li><a href="delivery.html">Доставка</a></li>
+      <li><a href="contacts.html">Контакты</a></li>
+      <!--Это ведь два листа,не один?Они же не зря цветом различаются-->
+    </ul>
+      <li><a href="materials.html">Материалы</a></li>
+      <li><a href="tech.html">Техника</a></li>
+      <li><a href="instrument.html">Инструмент</a></li>
+      <li><a href="special-offer.html">Спецпредложения</a></li>
+  </section>
+  <section>
+    <p>(C)2010-2019 Компания "Техномаркет" <br>
+       Все права защищены</p>
+
+    <ul>
+      <li><a href="">В Контакте</a></li>
+      <li><a href="">Фэйсбук</a></li>
+      <li><a href="">Инстаграм</a></li>
+    </ul>
+
+    <p>Обратная связь</p>
+    <p><a href="https://htmlacademy.ru">mail@htmlacademy.ru</a></p>
+
+    <p>Разработано:</p>
+    <p><a href="https://htmlacademy.ru">HTML Academy</a></p>
+      
+  </section>
+</footer>
+</body>
 </html>
