--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <header>
   <div>
-    <p><a href="main.html">Техномарт</a></p>
+    <p><a>Техномарт</a></p>
     <!--Форма
     <>Поиск<>
     -->
@@ -22,17 +22,13 @@
   строительных материалов<br>
   и Инструментовдля ремесла
 </h1>
-  <p><button type="button" name="number">+7(812)555-05-55</button></p>
+  <p><a href="tel:+78125550555">+7(812)555-05-55</a>s</p>
   <p>г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p>
 
 <ul>
-  <!--
-   1. Я подрозумеваю что должна быть кнопка выхода,если есть кнопка входа.
-   2. Регистрация это в <button>  или <a>?
-  -->
- <li><button type="button">Выход</button></li>
- <li><button type="button">Войти</button></li>
- <li><button type="button">Регистрация</button></li>
+  
+ <li><a href="#">Войти</a></li>
+ <li><a href="#">Регистрация</a></li>
 </ul>
 </section>
 <nav>
@@ -53,79 +49,112 @@
     <!--
       Это все ссылки или перечесление *фишек* сайта?
     -->
-    <p>Материалы</p>
-    <p>на любой вкус</p>
+    <p><span>Материалы</span></p>
+    <a href="#">на любой вкус</a>
   </div>
   <div>
-    <p>Инструмент</p>
-    <p>на все случаи жизни</p>
+    <p><span>Инструмент</span></p>
+    <a href="#">на все случаи жизни</a>
   </div>
   <div>
-    <p>Техника</p>
-    <p>для стройки</p>
+    <p><span>Техника</span></p>
+    <a href="#">для стройки</a>
   </div>
   <div>
-    <p>Скидки 50%</p>
-    <p>на 350 товаров</p>
+    <p><span>Скидки 50%</span></p>
+    <a href="#">на 350 товаров</a>
   </div>
   <div>
-    <p>Доставка</p>
-    <p>Бесплатно</p>
+    <p><span>Доставка</span></p>
+    <a href="#">Бесплатно</a>
   </div>
   <div>
-    <p>Дрели</p>
+    <p><span>Дрели</span></p>
     <p>Соседям на радость!</p>
-    <a href=""><img src=""></a>
-    <button type="button">Вперед</button>
-    <button type="button">Назад</button>
+    <img src="#" alt="">
+    <a href="">Открыть каталог</a>
+    <!--
+      <button type="button">Вперед</button>
+      <button type="button">Назад</button>
+    -->
+    <p>Перфораторы</p>
+    <p>Настоящие мужские игрушки</p>
+    <img src="#" alt="">
+    <a href="#">Открыть каталог</a>
+
   </div>
 </section>
 
 <section>
   <h2>Популярные товары</h2>
-  <p><a href="">Все популярные товары</a></p>
+  <p><a href="#">Все популярные товары</a></p>
 
  <ul>
-  <li><h3><span>Перфоратор BOSH</span><br> </h3></li>
-  <p><span>BFG 9000</span></p>
-  <p>32500 p.</p>
-  <p>25500 p.</p>
+  <li>
+    <h3>
+    <span>Перфоратор BOSH BFG 9000</span>
+    </h3>
+    <p><del>32500 p.</del></p>
+    <p>25500 p.</p>
+    <div>
+        <a href='#'>купить</a>
+        <a href='#'>В закладки</a>
+     </div>
+  </li>
 
-
-  <li><h3><span>Перфоратор BOSH</span><br></h3></li>
-  <p><span>BFG 3000</span></p>
-  <p>22500 p.</p>
-  <p>15500 p.</p>
-
+  <li>
+    <h3>
+    <span>Перфоратор BOSH BFG 3000</span>
+    </h3>
+    <p><del>22500 p.</del></p>
+    <p>15500 p.</p>
+    <div>
+        <a href='#'>купить</a>
+        <a href='#'>В закладки</a>
+     </div>
+  </li>
  
-  <li><h3><span>Перфоратор BOSH<span></span><br></h3></li>
-  <p><span>BFG 6000</span></p>
-  <p>30500 p.</p>
-  <p>25500 p.</p>
+  <li>
+    <h3>
+    <span>Перфоратор BOSH BFG 6000</span>
+    </h3>
+    <p><del>30500 p.</del></p>
+    <p>25500 p.</p>
+    <div>
+        <a href='#'>купить</a>
+        <a href='#'>В закладки</a>
+     </div>
+  </li>
   
-  <li><h3><span>Перфоратор BOSH</span><br></h3></li>
-  <p><span>BFG 2000</span></p><br>
-  <br>
-  <p>12500 p.</p>
-
+  <li>
+    <h3>
+    <span>Перфоратор BOSH BFG 2000</span>
+    </h3>
+    <br>
+    <p>12500 p.</p>
+    <div>
+        <a href='#'>купить</a>
+        <a href='#'>В закладки</a>
+     </div>
+  </li>
  </ul>
+
+
 </section>
 <section>
  <h2>Популярные производители</h2>
  <p><a href="">Все производители</a></p>
 
 <ul>
-<!--
-  Это все в <div> Или прямо в <li> ?
--->
- <li><img src=""></li>
- <li><img src=""></li>
- <li><img src=""></li>
- <li><img src=""></li>
- <li><img src=""></li>
- <li><img src=""></li>
- <li><img src=""></li>
- <li><img src=""></li>
+
+ <li><a href="#">Bosch<img src="#" alt=""></a></li>
+ <li><a href="#">Makita<img src="#" alt=""></a></li>
+ <li><a href="#">DeWalt<img src="#" alt=""></a></li>
+ <li><a href="#">Интерскол<img src="#" alt=""></a></li>
+ <li><a href="#">Hitachi<img src="#" alt=""></a></li>
+ <li><a href="#">LG<img src="#" alt=""></a></li>
+ <li><a href="#">AEG<img src="#" alt=""></a></li>
+ <li><a href="#">metabo<img src="#" alt=""></a></li>
 
 </ul>
 
@@ -135,24 +164,51 @@
 <section>
   <h2>Сервисы</h2>
   <p>Хороший интернет магазин отличается от плохого не только ценами!<br>
-     Мы стораемся изо всех сил чтобы сделать ваши покупки прятными</p>
+     Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными</p>
+  
   
     <ul>
-
-      <li><button type="">Доставка</button></li>
-      <li><button type="">Гарантия</button></li>
-      <li><button type="">Кредит</button></li>      
+      <li><button>Гарантия</button></li>
+      <li><button>Доставка</button></li>
+      <li><button>Кредит</button></li>      
     </ul> 
 
-    <h3>Доставка</h3>
-    <p>Мы с удовольствием доставим  ваш товар прямо<br>
+    <div>
+      <h3>Доставка</h3>
+      <p>Мы с удовольствием доставим  ваш товар прямо<br>
        к вашему подъезду совершенно бесплатно!<br>
        Ведь мы неплохо заработаем,<br>
        поднимая его на ваш этаж</p>
 
-   <div><img src=""></div>    
+      <img src="#" alt="">
+    </div> 
+
+    <div>
+        <h3>Гарантия</h3>
+        <p>Если купленный у нас товар поломается или заискрит,
+          а также в случае пожара, спровоцированного его возгоранием,
+          вы всегда можете быть уверенны в нашей гарантии.Мы обменяем
+          сгоревший товар на новый.
+          Дож уж восстановите как-нибудь сами.
+        </p>
+  
+        <img src="#" alt=""> 
+    </div>
+      
+    <div>   
+      <h3>Кредит</h3>
+      <p>Залезть в долговую яму стало проще!<br>
+        Кредитные консультанты придут вам на помощь.<br>
+      </p>
+      <br>
+      <a href="#">Отправить заявку</a> 
+
+      <img src="#" alt="">
+    </div> 
+
 
 </section>
+
 <section>
   <h2>Информация о компании </h2>
 <div>
@@ -173,7 +229,7 @@
 </div>
 
 
-<div>
+<section>
 
   <h3>Контакты</h3>
   <p>Вы можете забрать товар сами,<br> 
@@ -181,8 +237,10 @@
   <br>
 <!--Тут будет карта-->
   
-</div>
 </section>
+
+</section>
+
 </main>
 
 <footer>
@@ -200,26 +258,28 @@
       <li><a href="contacts.html">Контакты</a></li>
       <!--Это ведь два листа,не один?Они же не зря цветом различаются-->
     </ul>
+    <ul>
       <li><a href="materials.html">Материалы</a></li>
       <li><a href="tech.html">Техника</a></li>
       <li><a href="instrument.html">Инструмент</a></li>
       <li><a href="special-offer.html">Спецпредложения</a></li>
+    </ul>
   </section>
   <section>
     <p>(C)2010-2019 Компания "Техномаркет" <br>
        Все права защищены</p>
 
     <ul>
-      <li><a href="">В Контакте</a></li>
-      <li><a href="">Фэйсбук</a></li>
-      <li><a href="">Инстаграм</a></li>
+      <li><a href="#">В Контакте</a></li>
+      <li><a href="#">Фэйсбук</a></li>
+      <li><a href="#">Инстаграм</a></li>
     </ul>
 
     <p>Обратная связь</p>
     <p><a href="https://htmlacademy.ru">mail@htmlacademy.ru</a></p>
 
     <p>Разработано:</p>
-    <p><a href="https://htmlacademy.ru">HTML Academy</a></p>
+    <p><a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a></p>
       
   </section>
 </footer>
