--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <ul>
     <li><a href="main.html">Главная></a></li>
     <li><a href="about.html">Компания</a></li>
-    <li><a href="list.html">Каталог</a></li>
+    <li><a href="catalog.html">Каталог</a></li>
     <li><a href="news/html">Новости</a></li>
     <li><a href="special-offer.html">Спецпредложения</a></li>
     <li><a href="delivery.html">Доставка</a></li> 
