Добавил и подключил изображения

--- a/index.html
+++ b/index.html
@@ -33,22 +33,19 @@
 </section>
 <nav>
   <ul>
-    <li><a href="main.html">Главная></a></li>
+    <li><a href="index.html">Главная></a></li>
     <li><a href="about.html">Компания</a></li>
     <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="news/html">Новости</a></li>
+    <li><a href="news.html">Новости</a></li>
     <li><a href="special-offer.html">Спецпредложения</a></li>
     <li><a href="delivery.html">Доставка</a></li> 
-    <li><a href="Contacts.html">Контакты</a></li>
+    <li><a href="contacts.html">Контакты</a></li>
   </ul>
 </nav>
 </header>
 <main>
 <section>
   <div>
-    <!--
-      Это все ссылки или перечесление *фишек* сайта?
-    -->
     <p><span>Материалы</span></p>
     <a href="#">на любой вкус</a>
   </div>
@@ -71,15 +68,15 @@
   <div>
     <p><span>Дрели</span></p>
     <p>Соседям на радость!</p>
-    <img src="#" alt="">
+    <img src="img/slider_drill.jpg" alt="Дрель">
     <a href="">Открыть каталог</a>
     <!--
       <button type="button">Вперед</button>
       <button type="button">Назад</button>
     -->
-    <p>Перфораторы</p>
+    <p><span>Перфораторы</span></p>
     <p>Настоящие мужские игрушки</p>
-    <img src="#" alt="">
+    <img src="img/slider_perforator.jpg" alt="Перфоратор">
     <a href="#">Открыть каталог</a>
 
   </div>
@@ -147,14 +144,14 @@
 
 <ul>
 
- <li><a href="#">Bosch<img src="#" alt=""></a></li>
- <li><a href="#">Makita<img src="#" alt=""></a></li>
- <li><a href="#">DeWalt<img src="#" alt=""></a></li>
- <li><a href="#">Интерскол<img src="#" alt=""></a></li>
- <li><a href="#">Hitachi<img src="#" alt=""></a></li>
- <li><a href="#">LG<img src="#" alt=""></a></li>
- <li><a href="#">AEG<img src="#" alt=""></a></li>
- <li><a href="#">metabo<img src="#" alt=""></a></li>
+ <li><a href="#">Bosch<img src="img/bosch.png" alt="Bosch"></a></li>
+ <li><a href="#">Makita<img src="img/makita.png" alt="Makita"></a></li>
+ <li><a href="#">DeWalt<img src="img/dewalt.png" alt="DeWalt"></a></li>
+ <li><a href="#">Интерскол<img src="img/interscol.png" alt="Интерскол"></a></li>
+ <li><a href="#">Hitachi<img src="img/hitachi.png" alt="Hitachi"></a></li>
+ <li><a href="#">LG<img src="img/LG.png" alt="LG"></a></li>
+ <li><a href="#">AEG<img src="img/AEG.png" alt="AEG"></a></li>
+ <li><a href="#">metabo<img src="img/metabo.png" alt="Metabo"></a></li>
 
 </ul>
 
@@ -180,7 +177,7 @@
        Ведь мы неплохо заработаем,<br>
        поднимая его на ваш этаж</p>
 
-      <img src="#" alt="">
+      <img src="img/delivery.png" alt="Доставка">
     </div> 
 
     <div>
@@ -192,7 +189,7 @@
           Дож уж восстановите как-нибудь сами.
         </p>
   
-        <img src="#" alt=""> 
+        <img src="img/garanty.png" alt="Гарантия"> 
     </div>
       
     <div>   
@@ -203,7 +200,7 @@
       <br>
       <a href="#">Отправить заявку</a> 
 
-      <img src="#" alt="">
+      <img src="img/credit.png" alt="Кредит">
     </div> 
 
 
@@ -235,7 +232,10 @@
   <p>Вы можете забрать товар сами,<br> 
      заехав в наш офис:<br></p>
   <br>
-<!--Тут будет карта-->
+<!--
+Тут будет карта
+<img src="map.png" alt="Карта">
+-->
   
 </section>
 
@@ -251,13 +251,13 @@
  
  
     <ul>
-      <li><a href="about.html">Компания</a></li>
+      <li><a href="index.html">Компания</a></li>
       <li><a href="news.html">Новости</a></li>
-      <li><a href="list.html">Каталог</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
       <li><a href="delivery.html">Доставка</a></li>
       <li><a href="contacts.html">Контакты</a></li>
-      <!--Это ведь два листа,не один?Они же не зря цветом различаются-->
     </ul>
+
     <ul>
       <li><a href="materials.html">Материалы</a></li>
       <li><a href="tech.html">Техника</a></li>
