--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
 </section>
 <nav>
   <ul>
-    <li><a href="main.html">Главная></a></li>
+    <li><a href="index.html">Главная></a></li>
     <li><a href="about.html">Компания</a></li>
     <li><a href="list.html">Каталог</a></li>
     <li><a href="news/html">Новости</a></li>
