--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
 <header>
   <div>
+    <img src="img/technomart.png" alt="Техномаркет">
     <p><a>Техномарт</a></p>
     <!--Форма
     <>Поиск<>
@@ -144,14 +145,14 @@
 
 <ul>
 
- <li><a href="#">Bosch<img src="img/bosch.png" alt="Bosch"></a></li>
- <li><a href="#">Makita<img src="img/makita.png" alt="Makita"></a></li>
- <li><a href="#">DeWalt<img src="img/dewalt.png" alt="DeWalt"></a></li>
- <li><a href="#">Интерскол<img src="img/interscol.png" alt="Интерскол"></a></li>
- <li><a href="#">Hitachi<img src="img/hitachi.png" alt="Hitachi"></a></li>
- <li><a href="#">LG<img src="img/LG.png" alt="LG"></a></li>
- <li><a href="#">AEG<img src="img/AEG.png" alt="AEG"></a></li>
- <li><a href="#">metabo<img src="img/metabo.png" alt="Metabo"></a></li>
+ <li><a href="#"><img src="img/bosch.png" alt="Bosch"></a></li>
+ <li><a href="#"><img src="img/makita.png" alt="Makita"></a></li>
+ <li><a href="#"><img src="img/dewalt.png" alt="DeWalt"></a></li>
+ <li><a href="#"><img src="img/interscol.png" alt="Интерскол"></a></li>
+ <li><a href="#"><img src="img/hitachi.png" alt="Hitachi"></a></li>
+ <li><a href="#"><img src="img/LG.png" alt="LG"></a></li>
+ <li><a href="#"><img src="img/AEG.png" alt="AEG"></a></li>
+ <li><a href="#"><img src="img/metabo.png" alt="Metabo"></a></li>
 
 </ul>
 
@@ -245,7 +246,8 @@
 
 <footer>
   <section>
-    <p>Техномарт</p>
+      <img src="img/technomart.png" alt="Техномаркет">
+      <p>Техномарт</p>
     <br>
     <p>г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p> 
  
