--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
         <p>
           Интернет магазин
           строительных материалов
-          и Инструментовдля ремесла
+          и инструментов для ремесла
         </p>
           <p><a href="tel:+78125550555">+7(812)555-05-55</a></p>
           <p>г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p>
