--- a/catalog.html
+++ b/catalog.html
@@ -8,12 +8,12 @@
     <header>
       <div>
         <p><a href="index.html">Техномарт</a></p>
-        <!--
+        
         <form action="№" method="get">
           <label for="search">Найти</label>
           <input type="search" name="search" id="search">
         </form>
-        -->
+        
         <p><a href="tabs.html">Закладки:0</a></p>
         <p><a href="bin.html">Корзина:10</a></p>
         <p><a href="order.html">Оформить заказ</a></p>
@@ -57,64 +57,77 @@
 
       <section>
         <h1>Перфораторы</h1>
-          <h2>Отфильтровать</h2>
-            <form action="#" method="get">
-              <label for="price">Цена</label>
-              <div>
-                0
-              <input type="range" min="0" max="30000" step="100" name="price" id="price">
-              30000
-               </div>
-              <div>
-                <h3>Производители</h3>
-                  <ul>
-                    <li>
-                      <input type="checkbox" name="bosh" id="bosh" checked>
-                      <label for="bosh">BOSH</label>
-                    </li>
+        <h2>Отфильтровать</h2>
+        <!--Доделать второй позунок,и отображение выбранных значений-->
+        <form action="#" method="get">
+          <label for="price">Цена</label>
+          <div>
+            0
+          <input type="range" min="0" max="30000" step="100" name="price" id="price">
+          30000
+            </div>
+          <div>
+            <h3>Производители</h3>
+              <ul>
+                <li>
+                  <input type="checkbox" name="bosh" id="bosh" checked>
+                  <label for="bosh">BOSH</label>
+                </li>
 
-                    <li>
-                      <input type="checkbox" name="interscol" id="interscol" >
-                      <label for="interscol">ИНТЕРСКОЛ</label> 
-                    </li>
+                <li>
+                  <input type="checkbox" name="interscol" id="interscol" >
+                  <label for="interscol">ИНТЕРСКОЛ</label> 
+                </li>
 
-                    <li>
-                      <input type="checkbox" name="makina" id="makina" checked>
-                      <label for="boshmakina">MAKINA</label> 
-                    </li>
+                <li>
+                  <input type="checkbox" name="makina" id="makina" checked>
+                  <label for="boshmakina">MAKINA</label> 
+                </li>
 
-                    <li>
-                      <input type="checkbox" name="dewalt" >
-                      <label for="dewalt" id="dewalt">DEWALT</label> 
-                    </li>
+                <li>
+                  <input type="checkbox" name="dewalt" >
+                  <label for="dewalt" id="dewalt">DEWALT</label> 
+                </li>
 
-                    <li>
-                      <input type="checkbox" name="hitachi" id="hitachi" >
-                      <label for="hitachi">HITACHI</label> 
-                    </li>
-                  </ul>
-              </div>
+                <li>
+                  <input type="checkbox" name="hitachi" id="hitachi" >
+                  <label for="hitachi">HITACHI</label> 
+                </li>
+              </ul>
+          </div>
 
-              <div>
-                <h3>Питание</h3>
-                  <ul>
-                    <li>
-                      <input type="checkbox" name="acc" id="acc" checked>
-                      <label for="acc">АККУМАЛЯТОРНЫЕ</label> 
-                    </li>
+          <div>
+            <h3>Питание</h3>
+              <ul>
+                <li>
+                  <input type="checkbox" name="acc" id="acc" checked>
+                  <label for="acc">аккумуляторные</label> 
+                </li>
 
-                    <li>
-                      <input type="checkbox" name="net" id="net" >
-                      <label for="net">СЕТЕВЫЕ</label> 
-                    </li>
-                  </ul>
-              </div>
-              <button type="submit">показать</button>
-          </form>
+                <li>
+                  <input type="checkbox" name="net" id="net" >
+                  <label for="net">сетевые</label> 
+                </li>
+              </ul>
+          </div>
+          <button type="submit">показать</button>
+        </form>
       </section>
 
       <section>
-      <!--Форма с выбранными фильтрами-->
+        <h2>Сортировка</h2>
+        <ul>
+          <li><a href="#"> По цене </a></li>
+          <li><a href="#"> По типу </a></li>
+          <li><a href="#"> По функционалу </a></li>
+          <li><a href="#"> Минимум </a></li>
+          <li><a href="#"> Максимум </a></li>
+        </ul>
+      </section>
+
+      </section>
+
+      <section>
         <ul>
 
           <li>
@@ -234,8 +247,13 @@
                 </div>
               </li> 
         </ul>
-          <!--Div  с переходам по странцам-->
-          <!--Что то,что подходит под опрделение Article-->
+        <div>  
+          <h4>Страницы</h4> 
+          <a href="#">1</a>
+          <a href="#">2</a>
+          <a href="#">3</a>
+          <a href="#">Следующая </a>
+        </div>
         <article>
           <h2>Пара слов о перфораторах</h2>
           <p>Перфоратор-универсальный инструмент.Предназначен для сверления и долбления отверстий в кирпиче,бетоне и камне.
