Исправил техномарт в футере

--- a/catalog.html
+++ b/catalog.html
@@ -267,7 +267,7 @@
 
     <footer>
       <section>
-        <p><a>Техномарт</a></p>
+        <img src="img/technomart.png" alt="Техномаркет">
         <br>
         <p>г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p> 
     
