--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
       <div>
         <p><a href="index.html">Техномарт</a></p>
         
-        <form action="№" method="get">
+        <form action="https://echo.htmlacademy.ru" method="get">
           <label for="search">Найти</label>
           <input type="search" name="search" id="search">
         </form>
@@ -59,7 +59,7 @@
         <h1>Перфораторы</h1>
         <h2>Отфильтровать</h2>
         <!--Доделать второй позунок,и отображение выбранных значений-->
-        <form action="#" method="get">
+        <form action="https://echo.htmlacademy.ru" method="get">
           <label for="price">Цена</label>
           <div>
             0
