--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,9 @@
   <body>
     <header>
       <div>
-        <p><a href="index.html">Техномарт</a></p>
+        <a href="index.html">
+          <img src="img/logo-technomart.svg" width="137" height="22" alt="Техномаркет">
+        </a>
         
         <form action="https://echo.htmlacademy.ru" method="get">
           <label for="search">Найти</label>
