--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </nav>
     </header>
     <main>
-      <section class="features wrap">
+      <section class="features">
         <div class="features-wrap wrap"> 
           <div class="materials features-item">
             <p>Материалы</p>
