Работа над слайдом

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="wrap">
       <section class="features">
-        <div class="features-wrap wrap"> 
+        <div class="features-wrap"> 
           <div class="materials features-item">
             <p>Материалы</p>
             <a href="#">на любой вкус</a>
@@ -86,30 +86,57 @@
             <a href="#">Бесплатно</a>
             <img src="img/svg-technomart/icon-5.svg" width="44px" height="65px">
           </div>
-          <div class="slides features-item">
-            <p>Дрели</p>
-            <p>Соседям на радость!</p>
-            <img src="img/slider_drill.jpg" width="620" height="266" alt="Дрель">
-            <!--
-              <img src="img/slider_drill.jpg" width="620" height="266" alt="Дрель">
+          <section class="slide features-item">
+
+            <div class="slide-controls">
+              <i class="active"></i>
+              <i></i>
+            </div>
+
+            <div class="slide-list">
+              <ul>
+                <li class="slide-item">
+                  <h3>Дрели</h3>
+                  <p>Соседям на радость!</p>
+                  <a class="slide-button button" href="">
+                    Открыть каталог
+                  </a>
+                </li>
+                <li class="slide-item">
+                    <h3>Перфораторы</h3>
+                    <p>Настоящие мужские игрушки</p>
+                    <a class="slide-button button" href="">
+                      Открыть каталог
+                    </a>
+                </li>
+              </ul>
+            </div>
+          </section>
+
+
+
+            <!--<img src="img/slider_drill.jpg" width="620" height="266" alt="Дрель">
             -->
-            <a href="">Открыть каталог</a>
+            <!--
+            <img src="img/slider_drill.jpg" width="620" height="266" alt="Дрель">
+            -->
+            <!--<a href="">Открыть каталог</a>-->
             <!--
               <button type="button">Вперед</button>
               <button type="button">Назад</button>
             -->
-            <p>Перфораторы</p>
-            <p>Настоящие мужские игрушки</p>
+            <!-- <p>Перфораторы</p>-->
+            <!--<p>Настоящие мужские игрушки</p>-->
             <!--
               <img src="img/slider_perforator.jpg" width="620" height="266" alt="Перфоратор">
             -->
-            <a href="#">Открыть каталог</a>
+            <!--<a href="#">Открыть каталог</a>-->
 
           </div>
         </div>
       </section>
 
-      <section class="popular-goods wrap">
+      <section class="popular-goods">
         <div class="popular-goods-menu">
           <h2>Популярные товары</h2>
           <p><a href="#">Все популярные товары</a></p>
@@ -171,7 +198,7 @@
         </div>
       </section>
 
-      <section class="popular-producers wrap">
+      <section class="popular-producers">
         <div class="popular-producers-menu">
           <h2>Популярные производители</h2>
           <p><a href="">Все производители</a></p>
@@ -191,7 +218,7 @@
 
       </section>
       
-      <section class="services wrap">
+      <section class="services">
         <h2>Сервисы</h2>
         <p>Хороший интернет магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными</p>
