--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <header>
-      <div class="header-top ">
+      <div class="header-top">
         <div class="header-top-wrapper wrap">
           <div class="h-left">
-            <a href="#" class="logo"><img src="img/logo-technomart.svg"></a>
+            <a href="#" class="logo"><img src="img/logo-technomart.svg" width="110px" height="20px" alt="Логотип"></a>
             <form action="https://echo.htmlacademy.ru" method="get">
               <label for="search">  </label>
               <input type="search" name="search" id="search" placeholder="Поиск">
@@ -24,39 +24,40 @@
           </div>
         </div>      
       </div>
-  
-      <section class="header-mid wrap">
-        <div class="mid-block-1">
-          <h1>
-          Интернет магазин
-          строительных материалов
-          и&nbsp;инструментов для ремесла
-          </h1>
-        </div>
+      <div class="wrap">
+        <section class="header-mid">
+          <div class="mid-block-1">
+            <h1>
+            Интернет магазин
+            строительных материалов
+            и&nbsp;инструментов для ремесла
+            </h1>
+          </div>
 
-        <div class="mid-block-2">
-          <p class="header-phone"><a href="tel:+78125550555" >+7(812)555-05-55</a>s</p>
-          <p class="header-location">г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p>
-        </div>
+          <div class="mid-block-2">
+            <p class="header-phone"><a href="tel:+78125550555" >+7(812)555-05-55</a></p>
+            <p class="header-location">г.Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
+          </div>
 
-        <div class="mid-block-3">
-          <ul class="profile">
-            <li><a href="#">Войти</a></li>
-            <li><a href="#">Регистрация</a></li>
+          <div class="mid-block-3">
+            <ul class="profile">
+              <li><a href="#">Войти</a></li>
+              <li><a href="#">Регистрация</a></li>
+            </ul>
+          </div>
+        </section>
+        <nav class="header-bot">
+          <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="about.html">Компания</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="news.html">Новости</a></li>
+            <li><a href="special-offer.html">Спецпредложения</a></li>
+            <li><a href="delivery.html">Доставка</a></li> 
+            <li><a href="contacts.html">Контакты</a></li>
           </ul>
-        </div>
-      </section>
-      <nav class="header-bot wrap">
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="about.html">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="news.html">Новости</a></li>
-          <li><a href="special-offer.html">Спецпредложения</a></li>
-          <li><a href="delivery.html">Доставка</a></li> 
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-      </nav>
+        </nav>
+      </div>
     </header>
     <main class="wrap">
       <section class="features">
