--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <link href="css/Style.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="index-header">
       <div class="header-top">
         <div class="header-top-wrapper wrap">
           <div class="h-left">
             <a href="#" class="logo"><img src="img/logo-technomart.svg" width="110px" height="20px" alt="Логотип"></a>
             <form action="https://echo.htmlacademy.ru" method="get">
               <label for="search">  </label>
-              <input type="search" name="search" id="search" placeholder="Поиск">
+              <input class="search" type="search" name="search"  id="search" placeholder="Поиск:">
             </form>
           </div>
 
           <div class="h-right">
-              <a href="tabs.html">Закладки</a>
-              <a href="bin.html">Корзина</a>
-              <a href="order.html" class="header-make-order">Оформить заказ</a>
+              <a class="tabs" href="tabs.html">Закладки: 0</a>
+              <a class="header-bin" href="bin.html">Корзина: 0</a>
+              <a class="header-make-order" href="order.html" >Оформить заказ</a>
           </div>
         </div>      
       </div>
@@ -35,16 +35,15 @@
           </div>
 
           <div class="mid-block-2">
-            <p class="header-phone"><a href="tel:+78125550555" >+7(812)555-05-55</a></p>
-            <p class="header-location">г.Санкт-Петербург, ул.Б.Конюшенная, д.19/8</p>
+            <p class="header-phone"><a href="tel:+78125550555" >+7(812) 555-05-55</a></p>
+            <p class="header-location">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
 
-          <div class="mid-block-3">
-            <ul class="profile">
-              <li><a href="#">Войти</a></li>
-              <li><a href="#">Регистрация</a></li>
-            </ul>
-          </div>
+          <ul class="profile mid-block-3">
+            <li><a class="enter" href="#">Войти</a></li>
+            <li><a class="register" href="#">Регистрация</a></li>
+          </ul>
+
         </section>
         <nav class="header-bot">
           <ul>
@@ -59,6 +58,7 @@
         </nav>
       </div>
     </header>
+    
     <main class="wrap">
       <section class="features">
         <div class="features-wrap"> 
