Первая версия рабочего хедера в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
 
           <div class="h-right">
               <a class="tabs" href="tabs.html">Закладки: 0</a>
-              <a class="header-bin" href="bin.html">Корзина: 0</a>
+              <a class="header-bin" href="bin.html">Корзина: 10</a>
               <a class="header-make-order" href="order.html" >Оформить заказ</a>
           </div>
         </div>      
@@ -39,13 +39,13 @@
             <p class="header-location">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
 
-          <div class="mid-block-3">
-            <p class="Profile-name">Равшан Джамшутович</p>
-            <ul class="profile-catalog">
-              <li><a class="my-orders" href="#">Мои заказы</a></li>
-              <li><a class="personal-profile" href="#">Личный кабинет</a></li>
-            </ul>
-        </div>
+          <div class="mid-block-3-catalog">
+            <a class="profile-name" href="#">Равшан Джамшутович</a>
+            <a class="login-exit" href="#"><img></a>
+            <a class="my-orders" href="#">Мои заказы</a>
+            <a class="personal-profile" href="#">Личный кабинет</a>
+          </div>
+
         </section>
         <nav class="header-bot">
           <ul>
