Доработка хэдера каталога

--- a/catalog.html
+++ b/catalog.html
@@ -18,8 +18,8 @@
           </div>
 
           <div class="h-right">
-              <a class="tabs" href="tabs.html">Закладки: 0</a>
-              <a class="header-bin" href="bin.html">Корзина: 10</a>
+              <a class="tabs tabs-active" href="tabs.html">Закладки: 0</a>
+              <a class="header-bin header-bin-active" href="bin.html">Корзина: 10</a>
               <a class="header-make-order" href="order.html" >Оформить заказ</a>
           </div>
         </div>      
