--- a/index.html
+++ b/index.html
@@ -60,33 +60,42 @@
     </header>
     
     <main class="wrap">
+
       <section class="features">
         <div class="features-wrap"> 
+
           <div class="materials features-item">
             <p>Материалы</p>
             <a href="#">на любой вкус</a>
-            <img src="img/svg-technomart/icon-1.svg" width="44px" height="65px">
+            <!--<img src="img/svg-technomart/icon-1.svg" width="44px" height="65px">-->
           </div>
-          <div class="instruments features-item">
+
+          <div class="instruments features-item" order=1>
             <p>Инструмент</p>
             <a href="#">на все случаи жизни</a>
-            <img src="img/svg-technomart/icon-2.svg" width="44px" height="65px">
+            <!--<img src="img/svg-technomart/icon-2.svg" width="44px" height="65px">-->
           </div>
+
           <div class="techs features-item">
             <p>Техника</p>
             <a href="#">для стройки</a>
-            <img src="img/svg-technomart/icon-3.svg" width="44px" height="65px">
+            <!--<img src="img/svg-technomart/icon-3.svg" width="44px" height="65px">-->
           </div>
-          <div class="sales features-item">
-            <p>Скидки 50%</p>
-            <a href="#">на 350 товаров</a>
-            <img src="img/svg-technomart/icon-4.svg" width="44px" height="65px">
+
+          <div class="features-block">
+            <div class="sales features-item">
+              <p>Скидки 50%</p>
+              <a href="#">на 350 товаров</a>
+              <!--<img src="img/svg-technomart/icon-4.svg" width="44px" height="65px">-->
+            </div>
+
+            <div class="delivery features-item">
+              <p>Доставка</p>
+              <a href="#">Бесплатно</a>
+              <!--<img src="img/svg-technomart/icon-5.svg" width="44px" height="65px">-->
+            </div>
           </div>
-          <div class="delivery features-item">
-            <p>Доставка</p>
-            <a href="#">Бесплатно</a>
-            <img src="img/svg-technomart/icon-5.svg" width="44px" height="65px">
-          </div>
+
           <div class="slide features-item">
 
             <div class="slide-controls">
