Дороаботка блока features

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
           <div class="instruments features-item" order=1>
             <p>Инструмент</p>
-            <a href="#">на все случаи жизни</a>
+            <a href="#">на все случаи</a>
             <!--<img src="img/svg-technomart/icon-2.svg" width="44px" height="65px">-->
           </div>
 
@@ -103,8 +103,8 @@
               <i></i>
             </div>
 
-            <div class="slide-list">
-              <ul>
+            <div class="slide-menu">
+              <ul class="slide-list">
                 <li class="slide-item">
                   <h3>Дрели</h3>
                   <p>Соседям на радость!</p>
