Декоративные элементы дял features

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <div class="features-wrap"> 
 
           <div class="materials features-item">
+            <div class="flag flag-new">Новое</div>
             <p>Материалы</p>
             <a href="#">на любой вкус</a>
             <!--<img src="img/svg-technomart/icon-1.svg" width="44px" height="65px">-->
