Выравнивание блов  "populars"

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 
       <section class="popular-goods">
 
-        <div class="popular-goods-menu">
-          <h2>Популярные товары</h2>
+        <div class="populars popular-goods-menu">
+          <h2>Популярные товары:</h2>
           <p><a href="#" class="button">Все популярные товары</a></p>
         </div>
 
@@ -225,8 +225,8 @@
       </section>
 
       <section class="popular-producers">
-        <div class="popular-producers-menu">
-          <h2>Популярные производители</h2>
+        <div class="populars popular-producers-menu">
+          <h2>Популярные производители:</h2>
           <p><a href="" class="button">Все производители</a></p>
         </div>
 
