--- a/index.html
+++ b/index.html
@@ -149,11 +149,8 @@
           <p><a href="#" class="button">Все популярные товары</a></p>
         </div>
 
-
-        <div class="goods-list">
-
-          <ul>
-            
+        <div>
+          <ul class="goods-list">
             <li class="goods-item">
               <div class="actions">
                 <a href='#' class="buy">купить</a>
