--- a/index.html
+++ b/index.html
@@ -104,19 +104,17 @@
                 <li class="slide-item">
                   <h3>Дрели</h3>
                   <p>Соседям на радость!</p>
-                  <a class="slide-button button" href="">
-                    Открыть каталог
-                  </a>
                 </li>
                 <li class="slide-item">
                     <h3>Перфораторы</h3>
                     <p>Настоящие мужские игрушки</p>
-                    <a class="slide-button button" href="">
-                      Открыть каталог
                     </a>
                 </li>
               </ul>
-            </div>
+              <a class="slide-button button" href="">
+                Открыть каталог
+              </a>
+          </div>
           </div>
 
 
@@ -149,8 +147,8 @@
           <p><a href="#" class="button">Все популярные товары</a></p>
         </div>
 
-        <div>
-          <ul class="goods-list">
+        <div class="goods-list">
+          <ul>
             <li class="goods-item">
               <div class="actions">
                 <a href='#' class="buy">купить</a>
@@ -250,7 +248,7 @@
             <div>
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим  ваш товар прямо<br>
-              к вашему подъезду совершенно бесплатно!<br>
+              к вашему подъезду совершенно бесплатно!
               Ведь мы неплохо заработаем,<br>
               поднимая его на ваш этаж</p>
               <!--
@@ -274,9 +272,9 @@
           <div>   
             <h3>Кредит</h3>
             <p>Залезть в долговую яму стало проще!<br>
-              Кредитные консультанты придут вам на помощь.<br>
+              Кредитные консультанты придут вам на помощь.
             </p>
-            <br>
+            
             <a href="#">Отправить заявку</a> 
 
             
@@ -358,8 +356,10 @@
       <section class="footer-bot">
         <div class="wrap">
           <div class="bot-item-1">
-            <p>(C)2010-2019 Компания "Техномарт" <br>
-              Все права защищены</p>
+            <p>
+              (C)2010-2019 Компания "Техномарт" 
+              Все права защищены
+            </p>
           </div>
 
           <div class="bot-item-2">
