--- a/index.html
+++ b/index.html
@@ -98,23 +98,20 @@
               <i class="active"></i>
               <i></i>
             </div>
-
-            <div class="slide-menu">
-              <ul class="slide-list">
-                <li class="slide-item">
-                  <h3>Дрели</h3>
-                  <p>Соседям на радость!</p>
-                </li>
-                <li class="slide-item">
-                    <h3>Перфораторы</h3>
-                    <p>Настоящие мужские игрушки</p>
-                    </a>
-                </li>
-              </ul>
-              <a class="slide-button button" href="">
-                Открыть каталог
-              </a>
-          </div>
+            <ul class="slide-list">
+              <li class="slide-item">
+                <h3>Дрели</h3>
+                <p>Соседям на радость!</p>
+              </li>
+              <li class="slide-item">
+                  <h3>Перфораторы</h3>
+                  <p>Настоящие мужские игрушки</p>
+                  </a>
+              </li>
+            </ul>
+            <a class="slide-button button" href="">
+              Открыть каталог
+            </a>
           </div>
 
 
@@ -147,71 +144,69 @@
           <p><a href="#" class="button">Все популярные товары</a></p>
         </div>
 
-        <div class="goods-list">
-          <ul>
-            <li class="goods-item">
-              <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
-              </div>
-              <div class="picture">
-                <img src="img/perforator_9000.png" width="218" height="170" alt="BFG-9000">
-              </div>
-              <div class="name"><h3>
-              Перфоратор BOSH BFG 9000
-              </h3></div>
-              <div class="discount"><del>32500 p.</del></div>
-              <div class="price">25500 p.</div>
-            </li>
+        <ul class="goods-list">
+          <li class="goods-item" tabindex="0">
+            <div class="actions">
+              <a href='#' class="buy">купить</a>
+              <a href='#' class="bookmark">В закладки</a>
+            </div>
+            <div class="picture">
+              <img src="img/perforator_9000.png" width="218" height="170" alt="BFG-9000">
+            </div>
+            <h3 class="name">
+                Перфоратор BOSCH BFG 9000
+            </h3>
+            <del class="discount">32500 p.</del>
+            <div class="price">25500 p.</div>
+          </li>
 
-            <li class="goods-item">
-              <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
-              </div>
-              <div class="picture">
-                <img src="img/perforator_3000.png" width="218" height="170" alt="BFG-3000">
-              </div>
-              <div class="name"><h3>
-              Перфоратор BOSH BFG 3000
-              </h3></div>
-              <div class="discount"><del>22500 p.</del></div>
-              <div class="price">15500 p.</div>
-            </li>
+          <li class="goods-item" tabindex="0">
+            <div class="actions">
+              <a href='#' class="buy">купить</a>
+              <a href='#' class="bookmark">В закладки</a>
+            </div>
+            <div class="picture">
+              <img src="img/perforator_3000.png" width="218" height="170" alt="BFG-3000">
+            </div>
+            <h3 class="name">
+              <a href="">Перфоратор BOSCH BFG 3000</a>
+            </h3>
+            <del class="discount">22500 p.</del>
+            <div class="price">15500 p.</div>
+          </li>
 
-            <li class="goods-item">
-              <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
-              </div>
-              <div class="picture">
-                <img src="img/perforator_6000.png" width="218" height="170" alt="BFG-6000">
-              </div>
-              <div class="name"><h3>
-              Перфоратор BOSH BFG 6000
-              </h3></div>
-              <div class="discount"><del>30500 p.</del></div>
-              <div class="price">25500 p.</div>
-            </li>
+          <li class="goods-item" tabindex="0">
+            <div class="actions">
+              <a href='#' class="buy">купить</a>
+              <a href='#' class="bookmark">В закладки</a>
+            </div>
+            <div class="picture">
+              <img src="img/perforator_6000.png" width="218" height="170" alt="BFG-6000">
+            </div>
+            <h3 class="name">
+               Перфоратор BOSCH BFG 6000
+            </h3>
+            <del class="discount">30500 p.</del>
+            <div class="price">25500 p.</div>
+          </li>
 
-            <li class="goods-item">
-              <div class="flag flag-new">новое</div>
-              <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
-              </div>
-              <div class="picture">
-                <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
-              </div>
-              <div class="name"><h3>
-              Перфоратор BOSH BFG 2000
-              </h3></div>
-              <div class="discount"><del></del></div>
-              <div class="price">12500 p.</div>
-            </li>
+          <li class="goods-item" tabindex="0">
+            <div class="flag flag-new">новое</div>
+            <div class="actions">
+              <a href='#' class="buy">купить</a>
+              <a href='#' class="bookmark">В закладки</a>
+            </div>
+            <div class="picture">
+              <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
+            </div>
+            <h3 class="name">
+               Перфоратор BOSCH BFG 2000
+            </h3>
+            <div class="discount"><del></del></div>
+            <div class="price">12500 p.</div>
+          </li>
+        </ul>
 
-          </ul>
-        </div>
       </section>
 
       <section class="popular-producers">
@@ -220,7 +215,7 @@
           <p><a href="" class="button">Все производители</a></p>
         </div>
 
-        <ul>
+        <ul class="producers-list">
           <li class="producers-item"><a href="#"><img src="img/bosch.png" width="126" height="37" alt="Bosch"></a></li>
           <li class="producers-item"><a href="#"><img src="img/makita.png" width="123" height="40" alt="Makita"></a></li>
           <li class="producers-item"><a href="#"><img src="img/dewalt.png" width="146" height="44" alt="DeWalt"></a></li>
