--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="header-top-wrapper wrap">
           <div class="h-left">
             <a href="#" class="logo"><img src="img/logo-technomart.svg" width="110px" height="20px" alt="Логотип"></a>
-            <form action="https://echo.htmlacademy.ru" method="get">
-              <label for="search">  </label>
-              <input class="search" type="search" name="search"  id="search" placeholder="Поиск:">
-            </form>
+            <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+              <input class="search" type="search" name="search"  id="search" placeholder="Поиск:" aria-label="search">
+              <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
+            </form> 
           </div>
 
           <div class="h-right">
@@ -40,7 +40,11 @@
           </div>
 
           <ul class="profile mid-block-3">
-            <li><a class="enter" href="#">Войти</a></li>
+            <li>
+              <a class="enter" href="#">Войти</a>
+              <svg class="login-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path d="M14.875 8.5L6 0v6H0v5h6v6z"/><path d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/></svg>
+            </li>
+
             <li><a class="register" href="#">Регистрация</a></li>
           </ul>
 
@@ -154,7 +158,7 @@
               <img src="img/perforator_9000.png" width="218" height="170" alt="BFG-9000">
             </div>
             <h3 class="name">
-                Перфоратор BOSCH BFG 9000
+                <a href="">Перфоратор BOSCH BFG 9000</a>
             </h3>
             <del class="discount">32500 p.</del>
             <div class="price">25500 p.</div>
@@ -184,7 +188,7 @@
               <img src="img/perforator_6000.png" width="218" height="170" alt="BFG-6000">
             </div>
             <h3 class="name">
-               Перфоратор BOSCH BFG 6000
+              <a href=""> Перфоратор BOSCH BFG 6000</a>
             </h3>
             <del class="discount">30500 p.</del>
             <div class="price">25500 p.</div>
@@ -200,7 +204,7 @@
               <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
             </div>
             <h3 class="name">
-               Перфоратор BOSCH BFG 2000
+              <a href="">Перфоратор BOSCH BFG 2000</a>
             </h3>
             <div class="discount"><del></del></div>
             <div class="price">12500 p.</div>
