--- a/index.html
+++ b/index.html
@@ -271,18 +271,24 @@
         </div>
      </section>
 
-      <section class="company-info wrap">
-        <h2 class="visually-hidden">Информация о компании </h2>
-        <div class="company-info-wrapper wrap">
-          <section class="company-column-1">
-            <h3>Компания "Техномарт"</h3>
-            <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства <br>
-              не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-            <br>
-            <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-                  Техномарт работает со многими транспортными компаниями:</p>
+     <!--<h2 class="visually-hidden">Информация о компании </h2>-->
+     <section class="company-info">
 
-            <ul>
+          <section class="company-column-1">
+            <h3>
+              Компания &laquo;Техномарт&raquo;
+            </h3>
+            <p>
+                Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+                строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+            </p>
+            
+            <p>
+                Мы можем доставить ваш товар в самые отдаленные точки России!
+                Техномарт работает со многими транспортными компаниями: 
+            </p>
+
+            <ul class="tk-list">
               <li>Деловые линии</li>
               <li>Автотрейдинг</li>
               <li>ЖелДорЭкспедиция</li>
@@ -293,14 +299,14 @@
 
           <section class="company-column-2">
             <h3>Контакты</h3>
-            <p>Вы можете забрать товар сами,<br> 
-              заехав в наш офис:<br></p>
-            <br>
-          
+            <p>
+              Вы можете забрать товар сами
+              заехав в наш офис:
+            </p>
             <a href="#big-map"><img src="map.png" width="300" height="158" alt="Карта"></a>
             <a href="#">Заблудились?Напишите нам?</a>
           </section>
-        </div>
+
       </section>
 
       </main>
