Доработка блока о компании

--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
           <div class="materials features-item">
             <div class="flag flag-new">Новое</div>
             <p>Материалы</p>
-            <a href="#">на любой вкус</a>
+            <a class="transparent-button" href="#">на любой вкус</a>
           </div>
 
           <div class="instruments features-item" order=1>
             <p>Инструмент</p>
-            <a href="#">на все случаи</a>
+            <a class="transparent-button" href="#">на все случаи</a>
           </div>
 
           <div class="techs features-item">
             <p>Техника</p>
-            <a href="#">для стройки</a>
+            <a class="transparent-button" href="#">для стройки</a>
           </div>
 
           <div class="features-block">
             <div class="sales features-item">
               <p>Скидки 50%</p>
-              <a href="#">на 350 товаров</a>
+              <a class="transparent-button" href="#">на 350 товаров</a>
             </div>
 
             <div class="delivery features-item">
               <p>Доставка</p>
-              <a href="#">Бесплатно</a>
+              <a class="transparent-button" href="#">Бесплатно</a>
             </div>
           </div>
 
@@ -294,7 +294,7 @@
               <li>ЖелДорЭкспедиция</li>
             </ul>
 
-            <p><a href="about.html">Подробнее о компании</a></p>
+            <p><a class="button" href="about.html">Подробнее о компании</a></p>
           </section>
 
           <section class="company-column-2">
@@ -303,8 +303,8 @@
               Вы можете забрать товар сами
               заехав в наш офис:
             </p>
-            <a href="#big-map"><img src="map.png" width="300" height="158" alt="Карта"></a>
-            <a href="#">Заблудились?Напишите нам?</a>
+            <a class="map" href="#"><img src="img/map.png" width="300" height="158" alt="Карта"></a>
+            <a class="button" href="#">Заблудились? Напишите нам!</a>
           </section>
 
       </section>
