--- a/index.html
+++ b/index.html
@@ -315,16 +315,14 @@
         <section class="footer-top">
           <div class="wrap">
             <div class="footer-column-1">
-              <a href="#"><img src="img/technomart.png" alt="Техномаркет"></a>
-              <br>
+              <a class="footer-logo" href="#"><img src="img/technomart-footer.png" width="220" height="68" alt="Техномарт"></a>
               <div class="footer-location">
-                <p>г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p> 
-                <p>+7(812)555-05-55</p>
+                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p> 
+                <p>+7 (812) 555-05-55</p>
               </div>
            </div>
           
             <div class="footer-column-2">
-
               <ul class="footer-list-1">
                 <li><a href="index.html">Компания</a></li>
                 <li><a href="news.html">Новости</a></li>
@@ -347,25 +345,32 @@
         <div class="wrap">
           <div class="bot-item-1">
             <p>
-              (C)2010-2019 Компания "Техномарт" 
+              © 2010–2019 Компания «Техномарт»&nbsp; 
               Все права защищены
             </p>
           </div>
 
           <div class="bot-item-2">
             <ul>
-              <li><a href="#">В Контакте</a></li>
-              <li><a href="#">Фэйсбук</a></li>
-              <li><a href="#">Инстаграм</a></li>
+                  <!--В Контакте-->
+                  <!--Фэйсбук-->
+                  <!--Инстаграм-->
+              <li><a class="VK-icon soc-media" href="#"></a></li>
+              <li><a class="FB-icon soc-media" href="#"></a></li>
+              <li><a class="IG-icon soc-media" href="#"></a></li>
             </ul>
           </div>
           <div class="bot-item-3">
-            <p>Обратная связь</p>
-            <p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-          </div>
-          <div class="bot-item-4">
-            <p>Разработано:</p>
-            <p><a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a></p>
+            <div>
+              <p>Обратная связь:</p>
+              <p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+           </div>
+
+           <div>
+            <p>Разработано -</p>
+            <p><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+           </div>
+
           </div>
         </div>
        </section>
