Еще правки мэйна

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
             </div>
 
             <div class="slide features-item">
-
               <div class="slide-controls">
                 <i class="active"></i>
                 <i></i>
               </div>
+              
               <ul class="slide-list">
                 <li class="slide-item">
                   <h3>Дрели</h3>
@@ -351,12 +351,9 @@
 
           <div class="bot-item-2">
             <ul>
-                  <!--В Контакте-->
-                  <!--Фэйсбук-->
-                  <!--Инстаграм-->
-              <li><a class="VK-icon soc-media" href="#"></a></li>
-              <li><a class="FB-icon soc-media" href="#"></a></li>
-              <li><a class="IG-icon soc-media" href="#"></a></li>
+              <li><a class="VK-icon soc-media" href="#">Vkontakte</a></li>
+              <li><a class="FB-icon soc-media" href="#">Facebook</a></li>
+              <li><a class="IG-icon soc-media" href="#">Instagram</a></li>
             </ul>
           </div>
           <div class="bot-item-3">
