Переисправление блока соц сетей

--- a/index.html
+++ b/index.html
@@ -349,13 +349,12 @@
             </p>
           </div>
 
-          <div class="bot-item-2">
-            <ul>
-              <li><a class="VK-icon soc-media" href="#">Vkontakte</a></li>
-              <li><a class="FB-icon soc-media" href="#">Facebook</a></li>
-              <li><a class="IG-icon soc-media" href="#">Instagram</a></li>
-            </ul>
-          </div>
+          <ul class="bot-item-2">
+            <li><a class="VK-icon soc-media" href="#">Vkontakte</a></li>
+            <li><a class="FB-icon soc-media" href="#">Facebook</a></li>
+            <li><a class="IG-icon soc-media" href="#">Instagram</a></li>
+          </ul>
+
           <div class="bot-item-3">
             <div>
               <p>Обратная связь:</p>
